[package]
name = "wangdenticon-yew-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wangdenticon.rs
image = {version = "0.23", features = ["png"]}
md5 = "0.7.0"

# main.rs
base64 = "0.13.0"
yew = "0.19"
yew-router = "0.16"
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen = "=0.2.82"
web-sys = "0.3.59"
